@@ -1,4 +1,4 @@
-// $Id: CatapultXMLParser.h,v 1.2 2004/02/04 22:01:04 manuelbi Exp $
+// $Id: CatapultXMLParser.h,v 1.3 2004/02/05 20:02:35 h_oudejans Exp $
 // CatapultXMLParser.h: interface for the CatapultXMLParser class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -53,6 +53,7 @@ class CatapultXMLParser
 		struct ParseResult
 		{
 			ParseState parseState;
+			unsigned unknownLevel;
 			ReplyStatus replyState;
 			LogLevel logLevel;
 			UpdateType updateType;
